test/sigs_gateway_conformance/features/basicrouting/testdata/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-backend
  namespace: kgateway-conformance-test
spec:
  selector:
    app.kubernetes.io/name: echo-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http-web-svc
---
apiVersion: v1
kind: Pod
metadata:
  name: echo-server
  namespace: kgateway-conformance-test
  labels:
    app.kubernetes.io/name: echo-server
spec:
  containers:
    - name: echo
      image: registry.k8s.io/gateway-api/echo-basic:v1.5.0
      ports:
        - containerPort: 3000
          name: http-web-svc
      env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
