test/sigs_gateway_conformance/features/basicrouting/testdata/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: basicrouting-route
  namespace: kgateway-conformance-test
spec:
  parentRefs:
    - name: conformance-gateway
      namespace: kgateway-conformance-test
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: echo-backend
          port: 8080
